# MSE433Module4

ep_audio_monitor/: README.md  pyproject.toml  requirements.txt
ep_audio_monitor/ep_audio_monitor/: __init__.py  classify.py  cli.py  config.py  demo.py  export.py  pipeline.py  preprocess.py  segment.py  transcribe.py
ep_audio_monitor/ep_audio_monitor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ep_audio_monitor/ep_audio_monitor/sample_data/: demo_segments.csv
